# QtSecretTool

./: .gitignore  CMakeLists.txt  CMakeLists_test.txt  PROJECT_SUMMARY.md  README.md  demo_info.txt  main.cpp  test_crypto.cpp
qml/: Main.qml
qml/components/: CustomButton.qml  MasterPasswordDialog.qml  PasswordCard.qml  PasswordGeneratorDialog.qml  SearchBar.qml
qml/pages/: AddEditPasswordPage.qml  PasswordListPage.qml  SettingsPage.qml
src/: PasswordManager.cpp  PasswordManager.h  QtSecretTool.h
src/core/: Application.cpp  Application.h  PasswordManager.cpp  PasswordManager.h
src/crypto/: CryptoManager.cpp  CryptoManager.h
src/database/: DatabaseManager.cpp  DatabaseManager.h  SQLCipherWrapper.cpp  SQLCipherWrapper.h
src/models/: PasswordItem.cpp  PasswordItem.h  PasswordListModel.cpp  PasswordListModel.h
